Fix dropdowns on dark mode

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -27,12 +27,6 @@
      .moon{
          display: none;
      }
-
-     select option{
-         color: var(--altTextColor);
-     }
-
-
 }
 
 html {
